# XRefRag

./: .gitattributes  .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  pyproject.toml
XRefRAG_Out_Datasets/: XRefRAG-ADGM-ALL-dev.jsonl  XRefRAG-ADGM-ALL-train.jsonl  XRefRAG-ADGM-ALL.jsonl  XRefRAG-ADGM-DPEL-ALL-dev.jsonl  XRefRAG-ADGM-DPEL-ALL-test.jsonl  XRefRAG-ADGM-DPEL-ALL-train.jsonl  XRefRAG-ADGM-DPEL-ALL.jsonl  XRefRAG-ADGM-SCHEMA-ALL-dev.jsonl  XRefRAG-ADGM-SCHEMA-ALL-test.jsonl  XRefRAG-ADGM-SCHEMA-ALL-train.jsonl  XRefRAG-ADGM-SCHEMA-ALL.jsonl  XRefRAG-UKFIN-ALL-dev.jsonl  XRefRAG-UKFIN-ALL-train.jsonl  XRefRAG-UKFIN-ALL.jsonl  XRefRAG-UKFIN-DPEL-ALL-dev.jsonl  XRefRAG-UKFIN-DPEL-ALL-test.jsonl  XRefRAG-UKFIN-DPEL-ALL-train.jsonl  XRefRAG-UKFIN-DPEL-ALL.jsonl  XRefRAG-UKFIN-SCHEMA-ALL-dev.jsonl  XRefRAG-UKFIN-SCHEMA-ALL-test.jsonl  XRefRAG-UKFIN-SCHEMA-ALL-train.jsonl  XRefRAG-UKFIN-SCHEMA-ALL.jsonl  answer_eval_adgm_compact.csv  answer_eval_adgm_dpel_bm25_test.json  answer_eval_adgm_dpel_ce_rerank_union200_test.json  answer_eval_adgm_dpel_e5_test.json  answer_eval_adgm_dpel_rrf_test.json  answer_eval_adgm_schema_bm25_test.json  answer_eval_adgm_schema_ce_rerank_union200_test.json  answer_eval_adgm_schema_e5_test.json  answer_eval_adgm_schema_rrf_test.json  answer_eval_ukfin_compact.csv  answer_eval_ukfin_dpel_bm25_test.json  answer_eval_ukfin_dpel_ce_rerank_union200_test.json  answer_eval_ukfin_dpel_e5_test.json  answer_eval_ukfin_dpel_rrf_test.json  answer_eval_ukfin_schema_bm25_test.json  answer_eval_ukfin_schema_ce_rerank_union200_test.json  (+24 more)
(+847 files in other folders)
