[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrefrag"
version = "0.1.0"
description = "XRefRAG: Cross-reference–aware benchmark construction framework for citation-dependent RAG."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "RegNLP" }]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "requests>=2.31",
  "tqdm>=4.66",
  "lxml>=5.0",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "pre-commit>=3.7",
  "beautifulsoup4>=4.12",
]

ir = [
  "rank-bm25>=0.2.2",
  "numpy>=1.26",
  "sentence-transformers>=2.2.0",
  "faiss-cpu>=1.7.4",
  "torch>=2.0.0",
]
llm = [
  # placeholder for later (OpenAI/Azure/etc.)
  "diskcache>=5.6",
  "httpx>=0.27",
]

[project.scripts]
xrefrag = "xrefrag.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
